--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -99,7 +99,7 @@
 <script  src="{% static 'web/plugins/revolution/revolution/js/extensions/revolution-plugin.js' %}"></script>
 <script  src="{% static 'web/js/rev-script-1.js' %}"></script>
 
-    <div class="styleswitcher-inner">
+    <!-- <div class="styleswitcher-inner">
     
         <h6 class="switcher-title">Color Skin</h6>
         <ul class="color-skins">
@@ -113,7 +113,7 @@
             <li><a class="theme-skin skin-8" href="index5f8d-2.html?theme=css/skin/skin-8" title="blue Theme"></a></li>
         </ul>   
         
-    </div>    
+    </div>     -->
 </div>
 
 
