--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -96,7 +96,7 @@
                             font-weight: 700;
                             color:#111;
                             border-width:0px;font-family: 'Poppins', sans-serif; text-transform:uppercase ;">
-                            <div>We Build Your Dream</div>
+                            <div>TMT STEEL BARS</div>
                             
                             </div>
                         
@@ -149,7 +149,7 @@
                             font-weight: 500;
                             color:#111;
                              border-width:0px;font-family: 'Poppins', sans-serif;">
-                            It is a long established fact that a reader will be distracted by the readable content.
+                            Get the best quality TMT steel bars from Excel Traders for your construction needs.
                             
                             </div>                                                               
                         
@@ -177,7 +177,7 @@
                             data-paddingleft="[0,0,0,0]"
                             
                             style="z-index:100; text-transform:uppercase;">
-                            <a href="javascript:;" class="site-button-secondry btn-effect">More About</a>
+                            <a href="/products/" class="site-button-secondry btn-effect">More About</a>
                             </div>
      
                         </li>
@@ -267,7 +267,7 @@
                             font-weight: 700;
                             color:#111;
                             border-width:0px;font-family: 'Poppins', sans-serif; text-transform:uppercase ;">
-                            <div>From concept to creation.</div>
+                            <div>STEEL PIPES & SHEETS</div>
                             
                             </div>
                         
@@ -320,7 +320,7 @@
                             font-weight: 500;
                             color:#111;
                              border-width:0px;font-family: 'Poppins', sans-serif;">
-                            It is a long established fact that a reader will be distracted by the readable content.
+                            Excel Traders aims to provide you with the best quality steel pipes and sheets.
                             
                             </div>                                                               
                         
@@ -348,7 +348,7 @@
                             data-paddingleft="[0,0,0,0]"
                             
                             style="z-index:100; text-transform:uppercase;">
-                            <a href="javascript:;" class="site-button-secondry btn-effect">More About</a>
+                            <a href="/products/" class="site-button-secondry btn-effect">More About</a>
                             </div>
      
                         </li>
@@ -432,7 +432,7 @@
                             font-weight: 700;
                             color:#111;
                             border-width:0px;font-family: 'Poppins', sans-serif; text-transform:uppercase ;">
-                            <div>Making dreams come to life</div>
+                            <div>CONSTRUCTION CEMENT</div>
                             
                             </div>
                         
@@ -485,7 +485,7 @@
                             font-weight: 500;
                             color:#111;
                              border-width:0px;font-family: 'Poppins', sans-serif;">
-                            It is a long established fact that a reader will be distracted by the readable content.
+                            Get the best grade cement from your favourite brand at best offers from Excel Traders.
                             
                             </div>                                                               
                         
@@ -513,7 +513,7 @@
                             data-paddingleft="[0,0,0,0]"
                             
                             style="z-index:100; text-transform:uppercase;">
-                            <a href="javascript:;" class="site-button-secondry btn-effect">More About</a>
+                            <a href="/products/" class="site-button-secondry btn-effect">More About</a>
                             </div>
      
                         </li>                                                                                             
