--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -2456,7 +2456,7 @@ ol.list-num-count.list-outline-none>li:before {
 }
 
 .bg-black {
-	background-color: #da223c;
+	background-color: #50161e;
 }
 
 .bg-black-light {
