--- a/templates/web/about.html
+++ b/templates/web/about.html
@@ -322,7 +322,7 @@
                         	<div class="col-md-4 col-sm-6">
                                 <div class="our-story-pic-block">
                             		<div class="mt-media our-story-pic">
-                                        <img src="{% static 'web/images/gallery/portrait/pic4.jpg' %}" alt="">
+                                        <img src="{% static 'web/images/gallery/portrait/High-quality products.jpg' %}" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -339,7 +339,7 @@
                         	<div class="col-md-4 col-sm-6">
                             	<div class="our-story-pic-block">
                             		<div class="mt-media our-story-pic">
-                                        <img src="{% static 'web/images/gallery/portrait/pic7.jpg' %}" alt="">
+                                        <img src="{% static 'web/images/gallery/portrait/Best reasonable price.jpg' %}" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -356,7 +356,7 @@
                         	<div class="col-md-4 col-sm-6">
                                 <div class="our-story-pic-block">
                                     <div class="mt-media our-story-pic">
-                                        <img src="{% static 'web/images/gallery/portrait/pic6.jpg' %}" alt="">
+                                        <img src="{% static 'web/images/gallery/portrait/Delicate customer service.jpg' %}" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -373,7 +373,7 @@
                         	<div class="col-md-4 col-sm-6">
                             	<div class="our-story-pic-block">
                             		<div class="mt-media our-story-pic">
-                                        <img src="{% static 'web/images/gallery/portrait/pic5.jpg' %}" alt="">
+                                        <img src="{% static 'web/images/gallery/portrait/Transparent transactions.jpg' %}" alt="">
                                     </div>
                                 </div>
                             </div>                        
