--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -80,24 +80,28 @@
 
     {% include 'web/partials/footer.html' %}
 
-<script  src="{% static 'web/js/jquery-1.12.4.min.js' %}"></script>
-<script  src="{% static 'web/js/bootstrap.min.js' %}"></script>
-<script  src="{% static 'web/js/magnific-popup.min.js' %}"></script>
-<script  src="{% static 'web/js/waypoints.min.js' %}"></script>
-<script  src="{% static 'web/js/counterup.min.js' %}"></script>
-<script  src="{% static 'web/js/waypoints-sticky.min.js' %}"></script>
-<script  src="{% static 'web/js/isotope.pkgd.min.js' %}"></script>
-<script  src="{% static 'web/js/owl.carousel.min.js' %}"></script>
-<script src="{% static 'web/js/jquery.owl-filter.js' %}"></script>
-<script  src="{% static 'web/js/stellar.min.js' %}"></script>
-<script  src="{% static 'web/js/custom.js' %}"></script>
-<script  src="{% static 'web/js/shortcode.js' %}"></script>
-<script  src="{% static 'web/js/jquery.bgscroll.js' %}"></script>
-<script src="{% static 'web/js/switcher.js' %}"></script>
-<script  src="{% static 'web/plugins/revolution/revolution/js/jquery.themepunch.tools.min.js' %}"></script>
-<script  src="{% static 'web/plugins/revolution/revolution/js/jquery.themepunch.revolution.min.js' %}"></script>
-<script  src="{% static 'web/plugins/revolution/revolution/js/extensions/revolution-plugin.js' %}"></script>
-<script  src="{% static 'web/js/rev-script-1.js' %}"></script>
+    
+    <script  src="{% static 'web/js/jquery-1.12.4.min.js' %}"></script>
+    <script  src="{% static 'web/js/bootstrap.min.js' %}"></script>
+    <script  src="{% static 'web/js/magnific-popup.min.js' %}"></script>
+    <script  src="{% static 'web/js/waypoints.min.js' %}"></script>
+    <script  src="{% static 'web/js/counterup.min.js' %}"></script>
+    <script  src="{% static 'web/js/waypoints-sticky.min.js' %}"></script>
+    <script  src="{% static 'web/js/isotope.pkgd.min.js' %}"></script>
+    <script  src="{% static 'web/js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'web/js/jquery.owl-filter.js' %}"></script>
+    <script  src="{% static 'web/js/stellar.min.js' %}"></script>
+    <script  src="{% static 'web/js/custom.js' %}"></script>
+    <script  src="{% static 'web/js/shortcode.js' %}"></script>
+    <script  src="{% static 'web/js/jquery.bgscroll.js' %}"></script>
+    <script src="{% static 'web/js/switcher.js' %}"></script>
+    <script  src="{% static 'web/plugins/revolution/revolution/js/jquery.themepunch.tools.min.js' %}"></script>
+    <script  src="{% static 'web/plugins/revolution/revolution/js/jquery.themepunch.revolution.min.js' %}"></script>
+    <script  src="{% static 'web/plugins/revolution/revolution/js/extensions/revolution-plugin.js' %}"></script>
+    <script  src="{% static 'web/js/rev-script-1.js' %}"></script>
+    <script src="{% static 'web/js/main.js' %}"></script>
+    {% block javascript %}{% endblock %}
+
 
     <!-- <div class="styleswitcher-inner">
     
