--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -40,8 +40,8 @@
                         <!-- CONTACT FORM-->
                         <div class="row">
                         	<div class="col-md-8 col-sm-6">
-                            	<form class="contact-form cons-contact-form" method="post" action="https://7xtheme.com/shapen/form-handler.php">
-                                    <div class="contact-one m-b30">
+                            	<form id="form" class="contact-form cons-contact-form" method="POST" >                                    <div class="contact-one m-b30">
+                                  {% csrf_token %}
                                     
                                     <!-- TITLE START -->
                                     <div class="section-head">
@@ -54,19 +54,23 @@
                                     <!-- TITLE END --> 
                                                                         
                                         <div class="form-group">
-                                            <input name="username" type="text" required class="form-control" placeholder="Name">
+                                            <!-- <input name="username" type="text" required class="form-control" placeholder="Name"> -->
+                                            {{forms.name}}
                                         </div>
                                    
                                         <div class="form-group">
-                                            <input name="text" type="text" class="form-control" required placeholder="Phone">
+                                            <!-- <input name="phone" type="text" class="form-control" required placeholder="Phone"> -->
+                                            {{forms.phone}}
                                         </div>
 
                                         <div class="form-group">
-                                            <textarea name="address" rows="4" class="form-control " required placeholder="Address"></textarea>
+                                            <!-- <textarea name="address" rows="4" class="form-control " required placeholder="Address"></textarea> -->
+                                            {{forms.address}}
                                         </div>
                                    
                                         <div class="form-group">
-                                            <textarea name="message" rows="4" class="form-control " required placeholder="Message"></textarea>
+                                            <!-- <textarea name="message" rows="4" class="form-control " required placeholder="Message"></textarea> -->
+                                            {{forms.message}}
                                         </div>
                                     
                                     	<div class="text-right">
@@ -162,4 +166,9 @@
                     </div>
                  </div>
             </div>             -->
+
+
+
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
             {% endblock %}
