Index Whatsapp from

--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -546,8 +546,8 @@
                                 <div class="image-effect-one hover-shadow">
                                     <img src="{% static 'web/images/pic1.jpg' %}" alt="" />
                                     <div class="figcaption">
-                                        <h4>Construction</h4>
-                                        <p>Engineering your dreams with us.</p>
+                                        <h4>Net & Meshes</h4>
+                                        <p>Best nets and meshes for your needs.</p>
                                         <!-- <a href="#"><i class="link-plus bg-primary"></i></a> -->
                                     </div>
                                     
@@ -560,8 +560,8 @@
                                 <div class="image-effect-one hover-shadow">
                                     <img src="{% static 'web/images/pic2.jpg' %}" alt="" />
                                     <div class="figcaption">
-                                        <h4>Architecture</h4>
-                                        <p>Life is Architecture.</p>
+                                        <h4>Building Materials</h4>
+                                        <p>Quality building materials to assist your construction.</p>
                                         <!-- <a href="#"><i class="link-plus bg-primary"></i></a> -->
                                     </div>
                                  
@@ -573,8 +573,8 @@
                                 <div class="image-effect-one hover-shadow">
                                     <img src="{% static 'web/images/pic3.jpg' %}" alt="" />
                                     <div class="figcaption bg-dark">
-                                        <h4>Renovation</h4>
-                                        <p>Dazzling Design</p>
+                                        <h4>Steel & Sheets</h4>
+                                        <p>Strong steel bars and sheets  at best grade.</p>
                                          <!-- <a href="#"><i class="link-plus bg-primary"></i></a> -->
                                     </div>
                                    
@@ -731,8 +731,8 @@
                                 </div>
                                 <div class="col-md-5 col-sm-6">
                                     <div class="p-b0">
-                                    	<div class="mt-box">
-                                        	<h3 class="m-t0"><span class="font-weight-100"> We have</span><span class="text-primary"> 15 years</span> experience in construction</h3>
+                                    	<div class="mt-box">  
+                                        	<h3 class="m-t0"><span class="font-weight-100"> Delivering the</span><span class="text-primary"> most quality</span>  products from leading brands</h3>
                                         </div>                                    
                                         <span class="progressText text-black"><B>Architecher</B></span>
                                         <div class="progress mt-probar-1  m-b30 m-t10">
@@ -817,8 +817,8 @@
                             <div class="col-md-4 col-sm-12">
                                 <div class="contact-home1-left bg-dark p-a30 m-b0">
                                     <h3 class="text-white m-t0"><span class="font-weight-100">Enquire</span> Now</h3>
-                                    <form class="cons-contact-form2 form-transparent" method="post" action="https://7xtheme.com/shapen/form-handler2.php">
-                                      
+                                    <form class="cons-contact-form2 form-transparent" method="post" id="whatsapp-form">
+                                        {% csrf_token %}
                                         <div class="input input-animate">
                                             <label for="name">Name</label>
                                             <input type="text" name="username"  id="name" required>
