--- a/static/web/css/skin/skin-1.css
+++ b/static/web/css/skin/skin-1.css
@@ -74,7 +74,7 @@ a:active, a:hover, a:focus {
     color: #999d9d;
 }
 .testimonial-2 .testimonial-text .fa-quote-right {
-    color: rgb(245, 191, 35,0.3);
+    color: rgb(218 34 60 / 55%);
 }
 .get-in-touch-info {
     box-shadow: -10px -10px #999d9d;
