--- a/templates/web/products.html
+++ b/templates/web/products.html
@@ -343,7 +343,7 @@
                             <div class="col-md-5 col-sm-6 m-b30">
                                 <div class="our-exp">
                                     <div class="mt-box">
-                                        <h3 class="m-t0"><span class="font-weight-100"> We have</span><span class="text-primary"> 15 years</span> experience in construction</h3>
+                                        <h3 class="m-t0"><span class="font-weight-100">Delivering the</span><span class="text-primary"> most quality</span> products from leading brands</h3>
                                     </div>                                    
                                     <span class="progressText text-black"><B>Architecher</B></span>
                                     <div class="progress mt-probar-1  m-b30 m-t10">
