--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -1109,21 +1109,26 @@
                         
                             <!-- TESTIMONIAL START -->   
                          <div class="owl-carousel testimonial-home">
+                             {% for testimonial in testimonials %}
                             <div class="item">
                                 <div class="testimonial-2 m-a30 hover-animation-1">
                                     <div class=" block-shadow bg-white p-a30">
                                         <div class="testimonial-detail clearfix">
-                                            <div class="testimonial-pic radius shadow scale-in-center"><img src="{% static 'web/images/testimonials/pic1.jpg' %}" width="100" height="100" alt=""></div>
-                                            <h4 class="testimonial-name m-b5">Shelly Johnson -</h4>
-                                            <span class="testimonial-position">Business Person</span>
+                                            <div class="testimonial-pic radius shadow scale-in-center"><img src="{{testimonial.image.crop.75x75}}" width="100" height="100" alt=""></div>
+                                            <h4 class="testimonial-name m-b5">{{testimonial.name}}</h4>
+                                            <span class="testimonial-position">{{testimonial.designation}}</span>
                                         </div>                                    
                                         <div class="testimonial-text">
                                             <span class="fa fa-quote-right"></span>
-                                            <p> Excellent Customer support!. The template itself is very ext ended. simply dummy text of the printing and industry. the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
+                                            <p>{{testimonial.decription}} </p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            {% endfor %}
+
+                            
+                            {% comment %}
                             <div class="item">
                                 <div class="testimonial-2 m-a30  hover-animation-1">
                                     <div class=" block-shadow bg-white p-a30">
@@ -1184,7 +1189,8 @@
                                     </div>
                                 </div>
                             </div>
-                                                                                                                                          
+                            {% endcomment %}      
+
                         </div>
                         
                     </div>
