--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -98,7 +98,8 @@
                                             <div class="icon-xs"><i class="fa fa-phone"></i></div>
                                             <div class="icon-content">
                                                 <h5 class="m-t0 font-weight-500">Phone number</h5>
-                                                <p>(123) 456-78910</p>
+                                                <p><a class="contact-number" href="tel:+917306481304">7306481304</a></p>
+                                                <p><a class="contact-number" href="tel:+919446069291">9446069291</a></p>
                                             </div>
                                         </div>
                                         
