--- a/templates/web/partials/footer.html
+++ b/templates/web/partials/footer.html
@@ -64,8 +64,9 @@
                     <ul class="widget_address">
                         <li>34/7 Liverpool Street, Suite 636, London, United Kingdom</li>
                         <li>7xthemedemo@gmail.com</li>
-                        <li>(+298) 012-3456-789</li>
-                        <li>(+298) 146-6543-480</li>
+                        <li><a class="contact-color" href="tel:+917306481304">7306481304</a></li>
+                        <li><a class="contact-color" href="tel:+919446069291">9446069291</a></li>
+                        
                     </ul>
                
                 </div>                                              	
