--- a/templates/web/about.html
+++ b/templates/web/about.html
@@ -48,17 +48,17 @@
                             	<div class="m-about ">
                             		<div class="owl-carousel about-us-carousel">
                                         <!-- COLUMNS 1 -->
-                                        <div class="item">
+                                        <!-- <div class="item">
                                             <div class="ow-img">
                                                 <a href="javascript:void(0);"><img src="{% static 'web/images/gallery/portrait/pic4.jpg' %}" alt=""></a>
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <!-- COLUMNS 2 -->
-                                        <div class="item">
+                                        <!-- <div class="item">
                                             <div class="ow-img">
                                                 <a href="javascript:void(0);"><img src="{% static 'web/images/gallery/portrait/pic5.jpg' %}" alt=""></a>
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <!-- COLUMNS 3 -->
                                         <div class="item">
                                             <div class="owl-img">
@@ -66,11 +66,11 @@
                                             </div>
                                         </div>
                                         <!-- COLUMNS 4 -->
-                                        <div class="item">
+                                        <!-- <div class="item">
                                             <div class="ow-img">
                                                 <a href="javascript:void(0);"><img src="{% static 'web/images/gallery/portrait/pic7.jpg' %}" alt=""></a>
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <!-- COLUMNS 5 -->
                                         <div class="item">
                                             <div class="ow-img">
@@ -82,10 +82,10 @@
                             </div>                        
                     		<div class="col-md-7 col-sm-6">
                             	<div class="m-about-containt text-black p-t80">
-                                	<div class="m-about-years bg-moving" style="background-image:url({% static 'web/images/background/line.png' %});">
+                                	<!-- <div class="m-about-years bg-moving" style="background-image:url({% static 'web/images/background/line.png' %});">
                                         <span class="text-primary large-title">25</span>
                                         <span class="large-title-info">Years of Experience</span>
-                                    </div>
+                                    </div> -->
                                     <h3 class="font-weight-600">Enhancing your building quality with an integrated approach.</h3>
                                     <p>Excel Traders is one of Kerala's largest and most distinguished dealers of TMT bars, cement, steel pipes, sheets, and nets. Our goal is to deliver superior quality products at a reasonable price to all customers in Kerala. Whenever a building needs to be built, top-quality materials should be used. Excel Traders is your trusted choice when it comes to building materials. We deliver products that are of the highest quality and present at the best reasonable price without compromising the quality.</p>
                                     <div class="author-info p-t20">
