--- a/templates/web/contact.html
+++ b/templates/web/contact.html
@@ -6,7 +6,7 @@
         <div class="page-content">
         
             <!-- INNER PAGE BANNER -->
-            <div class="mt-bnr-inr overlay-wraper bg-parallax bg-top-center"  data-stellar-background-ratio="0.5"  style="background-image:url({% static 'web/images/banner/4.jpg' %});">
+            <div class="mt-bnr-inr overlay-wraper bg-parallax bg-top-center"  data-stellar-background-ratio="0.5"  style="background-image:url({% static 'web/images/banner/5.jpg' %});">
             	<div class="overlay-main bg-black opacity-07"></div>
                 <div class="container">
                     <div class="mt-bnr-inr-entry">
@@ -98,8 +98,8 @@
                                             <div class="icon-xs"><i class="fa fa-phone"></i></div>
                                             <div class="icon-content">
                                                 <h5 class="m-t0 font-weight-500">Phone number</h5>
-                                                <p><a class="contact-number" href="tel:+917306481304">7306481304</a></p>
-                                                <p><a class="contact-number" href="tel:+919446069291">9446069291</a></p>
+                                                <p><a class="contact-number" href="tel:+917306481304">7306481304</a> <br>
+                                                <a class="contact-number" href="tel:+919446069291">9446069291</a></p>
                                             </div>
                                         </div>
                                         
@@ -107,7 +107,8 @@
                                             <div class="icon-xs"><i class="fa fa-envelope"></i></div>
                                             <div class="icon-content">
                                                 <h5 class="m-t0 font-weight-500">Email address</h5>
-                                                <p>7xthemehelp@gmail.com</p>
+                                                <p><a href="mailto: excelkizhisseri@gmail.com" class="mail-mail" >excelkizhisseri@gmail.com </a> <br>
+                                                <a href="mailto: exceltraderssteel@gmail.com "  class="mail-mail" >exceltraderssteel@gmail.com </a></p>
                                             </div>
                                         </div>
                                         
@@ -115,7 +116,14 @@
                                             <div class="icon-xs"><i class="fa fa-map-marker"></i></div>
                                             <div class="icon-content">
                                                 <h5 class="m-t0 font-weight-500">Address info</h5>
-                                                <p>09, Martin Street B190 Polo Alto, San Francisco</p>
+                                                <h6> Head office: </h6>
+                                                <p>BALATHILPURAYA, AREEKODE ROAD, KIZHISSERI,
+                                                    KUZHIMANNA, Malappuram, Kerala, 673641
+                                                </p>
+                                                <h6>Branch 1 :</h6>
+                                                 <p>EDAVANNAPARA ROAD, KONDOTTY, Malappuram, Kerala, 673638</p>
+                                                 <h6>Branch 2 :</h6>
+                                                 <p>MONGAM ROAD, POOKOLATHUR, PULPATTA P.O, Malappuram, Kerala, 676123</p>
                                             </div>
                                         </div>
                                     </div>
