--- a/templates/web/partials/footer.html
+++ b/templates/web/partials/footer.html
@@ -48,12 +48,9 @@
                     <p class="max-w400">Excel Traders is your best choice in purchasing building materials for the best quality and offers.</p>                                
                     
                     <ul class="social-icons  mt-social-links">
-                        <li><a href="javascript:void(0);" class="fa fa-google"></a></li>
-                        <li><a href="javascript:void(0);" class="fa fa-rss"></a></li>
                         <li><a href="javascript:void(0);" class="fa fa-facebook"></a></li>
-                        <li><a href="javascript:void(0);" class="fa fa-twitter"></a></li>
-                        <li><a href="javascript:void(0);" class="fa fa-linkedin"></a></li>
-                    </ul>                                     
+                        <li><a href="https://www.instagram.com/excelsteelscements/?utm_medium=copy_link" class="fa fa-instagram"></a></li>
+                     </ul>                                     
                 </div>
             </div> 
             
@@ -62,8 +59,10 @@
                 <div class="widget widget_address_outer">
                     <h4 class="widget-title">Contact Us</h4>
                     <ul class="widget_address">
-                        <li>34/7 Liverpool Street, Suite 636, London, United Kingdom</li>
-                        <li>7xthemedemo@gmail.com</li>
+                        <li>BALATHILPURAYA, AREEKODE ROAD, KIZHISSERI, KUZHIMANNA, Malappuram, Kerala, 673641</li>
+                        <li>excelkizhisseri@gmail.com</li>
+                        <li>exceltraderssteel@gmail.com</li>
+
                         <li><a class="contact-color" href="tel:+917306481304">7306481304</a></li>
                         <li><a class="contact-color" href="tel:+919446069291">9446069291</a></li>
                         
