--- a/templates/web/products.html
+++ b/templates/web/products.html
@@ -6,7 +6,7 @@
         <div class="page-content">
         
             <!-- INNER PAGE BANNER -->
-            <div class="mt-bnr-inr overlay-wraper bg-parallax bg-top-center"  data-stellar-background-ratio="0.5"  style="background-image:url({% static 'web/images/banner/1.jpg' %});">
+            <div class="mt-bnr-inr overlay-wraper bg-parallax bg-top-center"  data-stellar-background-ratio="0.5"  style="background-image:url({% static 'web/images/banner/2.jpg' %});">
             	<div class="overlay-main bg-black opacity-07"></div>
                 <div class="container">
                     <div class="mt-bnr-inr-entry">
@@ -80,7 +80,7 @@
                         	<div class="col-md-4 col-sm-6 m-b30">
                             
                                 <div class="image-effect-one hover-shadow">
-                                    <img src="{% static 'web/images/services/1.jpg' %}" alt="" />
+                                    <img src="{% static 'web/images/services/TMT bar.jpg' %}" alt="" />
                                     <div class="figcaption">
                                         <h4>TMT bars</h4>
                                         <p>Excel Traders offers top-quality TMT bars for your dream projects.
@@ -95,7 +95,7 @@
                         	<div class="col-md-4 col-sm-6 m-b30">
                             
                                 <div class="image-effect-one hover-shadow">
-                                    <img src="{% static 'web/images/services/2.jpg' %}" alt="" />
+                                    <img src="{% static 'web/images/services/Cement.jpg' %}" alt="" />
                                     <div class="figcaption">
                                         <h4>Cement </h4>
                                         <p>Build with the best quality cement and make stronger buildings.</p>
@@ -108,7 +108,7 @@
                         	<div class="col-md-4 col-sm-12 m-b30">
                             
                                 <div class="image-effect-one hover-shadow">
-                                    <img src="{% static 'web/images/services/3.jpg' %}" alt="" />
+                                    <img src="{% static 'web/images/services/Steel Pipes.jpg' %}" alt="" />
                                     <div class="figcaption bg-dark">
                                         <h4>Steel Pipes</h4>
                                         <p>We make sure to deliver the most quality Pipes for every customer.
@@ -124,7 +124,7 @@
                             <div class="col-md-4 col-sm-12 m-b30">
                             
                                 <div class="image-effect-one hover-shadow">
-                                    <img src="{% static 'web/images/services/3.jpg' %}" alt="" />
+                                    <img src="{% static 'web/images/services/Sheets.jpg' %}" alt="" />
                                     <div class="figcaption bg-dark">
                                         <h4>Sheets</h4>
                                         <p>Excel Traders delivers the best sheets for your roofing necessities.
@@ -142,7 +142,7 @@
                             <div class="col-md-4 col-sm-12 m-b30">
                             
                                 <div class="image-effect-one hover-shadow">
-                                    <img src="{% static 'web/images/services/3.jpg' %}" alt="" />
+                                    <img src="{% static 'web/images/services/Net.jpg' %}" alt="" />
                                     <div class="figcaption bg-dark">
                                         <h4>Net</h4>
                                         <p>Build with the highest quality nets and meshes from Excel Traders.
@@ -158,7 +158,7 @@
                             <div class="col-md-4 col-sm-12 m-b30">
                             
                                 <div class="image-effect-one hover-shadow">
-                                    <img src="{% static 'web/images/services/3.jpg' %}" alt="" />
+                                    <img src="{% static 'web/images/services/Building Materials.jpg' %}" alt="" />
                                     <div class="figcaption bg-dark">
                                         <h4>Building Materials</h4>
                                         <p>The complete solution for all your needs for building materials.</p>
@@ -316,7 +316,7 @@
                 <div class="container">
                     <div class="section-content ">
                         <div class="row">
-                            <div class="col-md-7 col-sm-6  m-b30">
+                            <div class="col-md-12 col-sm-12  m-b30">
                             	<div class="brochur bg-dark p-a20">
                                     <div class="row">
                                         <div class="col-md-6">
@@ -340,7 +340,7 @@
                                     </div>
                                 </div>
                             </div>                        
-                            <div class="col-md-5 col-sm-6 m-b30">
+                            <!-- <div class="col-md-5 col-sm-6 m-b30">
                                 <div class="our-exp">
                                     <div class="mt-box">
                                         <h3 class="m-t0"><span class="font-weight-100">Delivering the</span><span class="text-primary"> most quality</span> products from leading brands</h3>
@@ -369,7 +369,7 @@
                                    
                             
                                 </div>
-                            </div>
+                            </div> -->
                        </div>  
                     </div>
                 </div>
