--- a/templates/web/about.html
+++ b/templates/web/about.html
@@ -310,7 +310,7 @@
 					<div class="section-head">
 						<div class="mt-separator-outer separator-left">
 							<div class="mt-separator text-white">
-								<h2 class="text-uppercase sep-line-one "><span class="font-weight-300 text-primary">About</span> Summary</h2>
+								<h2 class="text-uppercase sep-line-one "><span class="font-weight-300 text-primary-about">About</span> Summary</h2>
 							</div>
 						</div>
 					</div>                   
